# haneulchi

./: .editorconfig  .gitignore  .swiftformat  .swiftlint.yml  Cargo.toml  LICENSE  README.ko.md  README.md  SECURITY.md  index.html  justfile  package-lock.json  package.json  vite.config.ts  vitest.config.ts
crates/hc-api/: Cargo.toml
crates/hc-api/src/: automation.rs  dispatch.rs  envelope.rs  lib.rs  server.rs  sessions.rs  state.rs  tasks.rs  workflow.rs
crates/hc-api/tests/: automation.rs  security_contract.rs  server_contract.rs
crates/hc-cli/: Cargo.toml
crates/hc-cli/src/: client.rs  dispatch.rs  lib.rs  main.rs  output.rs  reconcile.rs  session.rs  state.rs  task.rs  workflow.rs
crates/hc-cli/tests/: cli_parity.rs
crates/hc-control-plane/: Cargo.toml
crates/hc-control-plane/src/: adapter_watch.rs  attention.rs  commands.rs  control_tower.rs  dispatch.rs  eligibility.rs  inventory.rs  lib.rs  orchestrator.rs  persistence.rs  reconcile.rs  recovery.rs  retry_queue.rs  reviews.rs  scheduler.rs  session_projection.rs  settings.rs  shared_store.rs  snapshot.rs  tasks.rs  timeline.rs  workflow_projection.rs  worktrees.rs
crates/hc-control-plane/tests/: compatibility_suite.rs  control_tower_projection.rs  degraded_suite.rs  dispatch_contract.rs  inventory_projection.rs  persistence_restore.rs  readiness_suite.rs  reconcile_tick.rs  recovery_flows.rs  security_redaction.rs  snapshot_projection.rs  task_board_projection.rs  worktree_provisioning.rs
crates/hc-ffi/: Cargo.toml
crates/hc-ffi/include/: hc_ffi.h
crates/hc-ffi/src/: api_server_bridge.rs  attention_bridge.rs  automation_bridge.rs  dispatch_bridge.rs  inventory_bridge.rs  lib.rs  persistence_bridge.rs  recovery_bridge.rs  review_bridge.rs  session_bridge.rs  settings_bridge.rs  state_bridge.rs  task_bridge.rs  workflow_bridge.rs
crates/hc-ffi/tests/: api_server_bridge.rs  attention_bridge.rs  automation_bridge.rs  dispatch_bridge.rs  inventory_bridge.rs  recovery_bridge.rs  runtime_info.rs  session_bridge.rs  settings_bridge.rs  (+3 more)
(+431 files in other folders)
