[package]
name = "hc-api"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
hc-control-plane = { path = "../hc-control-plane" }
hc-domain = { path = "../hc-domain" }
hc-workflow = { path = "../hc-workflow" }
httparse = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
