[package]
name = "hc-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "hc"
path = "src/main.rs"

[dependencies]
hc-api = { path = "../hc-api" }
hc-ffi = { path = "../hc-ffi" }
serde_json = "1.0"

[dev-dependencies]
hc-control-plane = { path = "../hc-control-plane" }
hc-domain = { path = "../hc-domain" }
