[package]
name = "hc-control-plane"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
hc-domain = { path = "../hc-domain" }
hc-runtime = { path = "../hc-runtime" }
hc-storage = { path = "../hc-storage" }
hc-workflow = { path = "../hc-workflow" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
