[package]
name = "hc-ffi"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"
crate-type = ["rlib", "staticlib"]

[dependencies]
hc-control-plane = { path = "../hc-control-plane" }
hc-domain = { path = "../hc-domain" }
hc-runtime = { path = "../hc-runtime" }
hc-workflow = { path = "../hc-workflow" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
